// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test plugin engine gql 1`] = `
Object {
  "fragments": Array [
    Object {
      "implementation": "fragment NoteFields on Note {
   id
   title
   description

} ",
      "name": "Note",
    },
    Object {
      "implementation": "fragment NoteExpandedFields on Note {
   id
   title
   description
   comments {
      id
      title
      description
   }
} ",
      "name": "NoteExpanded",
    },
    Object {
      "implementation": "fragment CommentFields on Comment {
   id
   title
   description

} ",
      "name": "Comment",
    },
    Object {
      "implementation": "fragment CommentExpandedFields on Comment {
   id
   title
   description
   noteComment {
      id
      title
      description
   }
} ",
      "name": "CommentExpanded",
    },
  ],
  "mutations": Array [
    Object {
      "implementation": "mutation createNote($data: NoteData!) {
  createNote(data: $data) {
      ...NoteFields
  }
}
",
      "name": "createNote",
    },
    Object {
      "implementation": "mutation updateNote($data: NoteData!) {
  updateNote(data: $data) {
      ...NoteFields
  }
}
",
      "name": "updateNote",
    },
    Object {
      "implementation": "mutation deleteNote($data: NoteData!) {
  deleteNote(data: $data) {
      ...NoteFields
  }
}",
      "name": "deleteNote",
    },
    Object {
      "implementation": "mutation createComment($data: CommentData!) {
  createComment(data: $data) {
      ...CommentFields
  }
}
",
      "name": "createComment",
    },
    Object {
      "implementation": "mutation updateComment($data: CommentData!) {
  updateComment(data: $data) {
      ...CommentFields
  }
}
",
      "name": "updateComment",
    },
    Object {
      "implementation": "mutation deleteComment($data: CommentData!) {
  deleteComment(data: $data) {
      ...CommentFields
  }
}",
      "name": "deleteComment",
    },
  ],
  "queries": Array [
    Object {
      "implementation": "query findNotes($filter: NoteFilter!, $limit: Int, $offset: Int) {
    findNotes(filter: $filter, limit: $limit, offset: $offset) {
      ...NoteExpandedFields
    }
  }",
      "name": "findNotes",
    },
    Object {
      "implementation": "query findAllNotes($limit: Int, $offset: Int) {
    findAllNotes(limit: $limit, offset: $offset) {
      ...NoteExpandedFields
    }
  }",
      "name": "findAllNotes",
    },
    Object {
      "implementation": "query findComments($filter: CommentFilter!, $limit: Int, $offset: Int) {
    findComments(filter: $filter, limit: $limit, offset: $offset) {
      ...CommentExpandedFields
    }
  }",
      "name": "findComments",
    },
    Object {
      "implementation": "query findAllComments($limit: Int, $offset: Int) {
    findAllComments(limit: $limit, offset: $offset) {
      ...CommentExpandedFields
    }
  }",
      "name": "findAllComments",
    },
  ],
  "subscriptions": Array [
    Object {
      "implementation": "subscription newNote {
  newNote {
      ...NoteFields
  }
}",
      "name": "newNote",
    },
    Object {
      "implementation": "subscription updatedNote {
  updatedNote {
      ...NoteFields
  }
}",
      "name": "updatedNote",
    },
    Object {
      "implementation": "subscription deletedNote {
  deletedNote {
      ...NoteFields
  }
}",
      "name": "deletedNote",
    },
    Object {
      "implementation": "subscription newComment {
  newComment {
      ...CommentFields
  }
}",
      "name": "newComment",
    },
    Object {
      "implementation": "subscription updatedComment {
  updatedComment {
      ...CommentFields
  }
}",
      "name": "updatedComment",
    },
    Object {
      "implementation": "subscription deletedComment {
  deletedComment {
      ...CommentFields
  }
}",
      "name": "deletedComment",
    },
  ],
}
`;

exports[`Test plugin engine gqlfragments 1`] = `
Object {
  "fragments": Array [],
  "mutations": Array [
    Object {
      "implementation": "

mutation createNote($data: NoteData!) {
  createNote(data: $data) {
      ...NoteFields
  }
}


fragment NoteFields on Note {
   id
   title
   description

} 

",
      "name": "createNote",
    },
    Object {
      "implementation": "

mutation updateNote($data: NoteData!) {
  updateNote(data: $data) {
      ...NoteFields
  }
}


fragment NoteFields on Note {
   id
   title
   description

} 

",
      "name": "updateNote",
    },
    Object {
      "implementation": "

mutation deleteNote($data: NoteData!) {
  deleteNote(data: $data) {
      ...NoteFields
  }
}

fragment NoteFields on Note {
   id
   title
   description

} 

",
      "name": "deleteNote",
    },
    Object {
      "implementation": "

mutation createComment($data: CommentData!) {
  createComment(data: $data) {
      ...CommentFields
  }
}


fragment CommentFields on Comment {
   id
   title
   description

} 

",
      "name": "createComment",
    },
    Object {
      "implementation": "

mutation updateComment($data: CommentData!) {
  updateComment(data: $data) {
      ...CommentFields
  }
}


fragment CommentFields on Comment {
   id
   title
   description

} 

",
      "name": "updateComment",
    },
    Object {
      "implementation": "

mutation deleteComment($data: CommentData!) {
  deleteComment(data: $data) {
      ...CommentFields
  }
}

fragment CommentFields on Comment {
   id
   title
   description

} 

",
      "name": "deleteComment",
    },
  ],
  "queries": Array [
    Object {
      "implementation": "

query findNotes($filter: NoteFilter!, $limit: Int, $offset: Int) {
    findNotes(filter: $filter, limit: $limit, offset: $offset) {
      ...NoteExpandedFields
    }
  }

fragment NoteExpandedFields on Note {
   id
   title
   description
   comments {
      id
      title
      description
   }
} 

",
      "name": "findNotes",
    },
    Object {
      "implementation": "

query findAllNotes($limit: Int, $offset: Int) {
    findAllNotes(limit: $limit, offset: $offset) {
      ...NoteExpandedFields
    }
  }

fragment NoteExpandedFields on Note {
   id
   title
   description
   comments {
      id
      title
      description
   }
} 

",
      "name": "findAllNotes",
    },
    Object {
      "implementation": "

query findComments($filter: CommentFilter!, $limit: Int, $offset: Int) {
    findComments(filter: $filter, limit: $limit, offset: $offset) {
      ...CommentExpandedFields
    }
  }

fragment CommentExpandedFields on Comment {
   id
   title
   description
   noteComment {
      id
      title
      description
   }
} 

",
      "name": "findComments",
    },
    Object {
      "implementation": "

query findAllComments($limit: Int, $offset: Int) {
    findAllComments(limit: $limit, offset: $offset) {
      ...CommentExpandedFields
    }
  }

fragment CommentExpandedFields on Comment {
   id
   title
   description
   noteComment {
      id
      title
      description
   }
} 

",
      "name": "findAllComments",
    },
  ],
  "subscriptions": Array [
    Object {
      "implementation": "

subscription newNote {
  newNote {
      ...NoteFields
  }
}

fragment NoteFields on Note {
   id
   title
   description

} 

",
      "name": "newNote",
    },
    Object {
      "implementation": "

subscription updatedNote {
  updatedNote {
      ...NoteFields
  }
}

fragment NoteFields on Note {
   id
   title
   description

} 

",
      "name": "updatedNote",
    },
    Object {
      "implementation": "

subscription deletedNote {
  deletedNote {
      ...NoteFields
  }
}

fragment NoteFields on Note {
   id
   title
   description

} 

",
      "name": "deletedNote",
    },
    Object {
      "implementation": "

subscription newComment {
  newComment {
      ...CommentFields
  }
}

fragment CommentFields on Comment {
   id
   title
   description

} 

",
      "name": "newComment",
    },
    Object {
      "implementation": "

subscription updatedComment {
  updatedComment {
      ...CommentFields
  }
}

fragment CommentFields on Comment {
   id
   title
   description

} 

",
      "name": "updatedComment",
    },
    Object {
      "implementation": "

subscription deletedComment {
  deletedComment {
      ...CommentFields
  }
}

fragment CommentFields on Comment {
   id
   title
   description

} 

",
      "name": "deletedComment",
    },
  ],
}
`;

exports[`Test plugin engine ts 1`] = `
Object {
  "fragments": Array [
    Object {
      "implementation": "import gql from \\"graphql-tag\\"

export const NoteFragment = gql\`
  fragment NoteFields on Note {
   id
   title
   description

} 
\`
",
      "name": "Note",
    },
    Object {
      "implementation": "import gql from \\"graphql-tag\\"

export const NoteExpandedFragment = gql\`
  fragment NoteExpandedFields on Note {
   id
   title
   description
   comments {
      id
      title
      description
   }
} 
\`
",
      "name": "NoteExpanded",
    },
    Object {
      "implementation": "import gql from \\"graphql-tag\\"

export const CommentFragment = gql\`
  fragment CommentFields on Comment {
   id
   title
   description

} 
\`
",
      "name": "Comment",
    },
    Object {
      "implementation": "import gql from \\"graphql-tag\\"

export const CommentExpandedFragment = gql\`
  fragment CommentExpandedFields on Comment {
   id
   title
   description
   noteComment {
      id
      title
      description
   }
} 
\`
",
      "name": "CommentExpanded",
    },
  ],
  "mutations": Array [
    Object {
      "implementation": "import gql from \\"graphql-tag\\"
import { NoteFragment } from \\"../fragments/Note\\"

export const createNote = gql\`
  mutation createNote($data: NoteData!) {
  createNote(data: $data) {
      ...NoteFields
  }
}


  \${NoteFragment}
\`
",
      "name": "createNote",
    },
    Object {
      "implementation": "import gql from \\"graphql-tag\\"
import { NoteFragment } from \\"../fragments/Note\\"

export const updateNote = gql\`
  mutation updateNote($data: NoteData!) {
  updateNote(data: $data) {
      ...NoteFields
  }
}


  \${NoteFragment}
\`
",
      "name": "updateNote",
    },
    Object {
      "implementation": "import gql from \\"graphql-tag\\"
import { NoteFragment } from \\"../fragments/Note\\"

export const deleteNote = gql\`
  mutation deleteNote($data: NoteData!) {
  deleteNote(data: $data) {
      ...NoteFields
  }
}

  \${NoteFragment}
\`
",
      "name": "deleteNote",
    },
    Object {
      "implementation": "import gql from \\"graphql-tag\\"
import { CommentFragment } from \\"../fragments/Comment\\"

export const createComment = gql\`
  mutation createComment($data: CommentData!) {
  createComment(data: $data) {
      ...CommentFields
  }
}


  \${CommentFragment}
\`
",
      "name": "createComment",
    },
    Object {
      "implementation": "import gql from \\"graphql-tag\\"
import { CommentFragment } from \\"../fragments/Comment\\"

export const updateComment = gql\`
  mutation updateComment($data: CommentData!) {
  updateComment(data: $data) {
      ...CommentFields
  }
}


  \${CommentFragment}
\`
",
      "name": "updateComment",
    },
    Object {
      "implementation": "import gql from \\"graphql-tag\\"
import { CommentFragment } from \\"../fragments/Comment\\"

export const deleteComment = gql\`
  mutation deleteComment($data: CommentData!) {
  deleteComment(data: $data) {
      ...CommentFields
  }
}

  \${CommentFragment}
\`
",
      "name": "deleteComment",
    },
  ],
  "queries": Array [
    Object {
      "implementation": "import gql from \\"graphql-tag\\"
import { NoteExpandedFragment } from \\"../fragments/NoteExpanded\\"

export const findNotes = gql\`
  query findNotes($filter: NoteFilter!, $limit: Int, $offset: Int) {
    findNotes(filter: $filter, limit: $limit, offset: $offset) {
      ...NoteExpandedFields
    }
  }

  \${NoteExpandedFragment}
\`
",
      "name": "findNotes",
    },
    Object {
      "implementation": "import gql from \\"graphql-tag\\"
import { NoteExpandedFragment } from \\"../fragments/NoteExpanded\\"

export const findAllNotes = gql\`
  query findAllNotes($limit: Int, $offset: Int) {
    findAllNotes(limit: $limit, offset: $offset) {
      ...NoteExpandedFields
    }
  }

  \${NoteExpandedFragment}
\`
",
      "name": "findAllNotes",
    },
    Object {
      "implementation": "import gql from \\"graphql-tag\\"
import { CommentExpandedFragment } from \\"../fragments/CommentExpanded\\"

export const findComments = gql\`
  query findComments($filter: CommentFilter!, $limit: Int, $offset: Int) {
    findComments(filter: $filter, limit: $limit, offset: $offset) {
      ...CommentExpandedFields
    }
  }

  \${CommentExpandedFragment}
\`
",
      "name": "findComments",
    },
    Object {
      "implementation": "import gql from \\"graphql-tag\\"
import { CommentExpandedFragment } from \\"../fragments/CommentExpanded\\"

export const findAllComments = gql\`
  query findAllComments($limit: Int, $offset: Int) {
    findAllComments(limit: $limit, offset: $offset) {
      ...CommentExpandedFields
    }
  }

  \${CommentExpandedFragment}
\`
",
      "name": "findAllComments",
    },
  ],
  "subscriptions": Array [
    Object {
      "implementation": "import gql from \\"graphql-tag\\"
import { NoteFragment } from \\"../fragments/Note\\"

export const newNote = gql\`
  subscription newNote {
  newNote {
      ...NoteFields
  }
}

  \${NoteFragment}
\`
",
      "name": "newNote",
    },
    Object {
      "implementation": "import gql from \\"graphql-tag\\"
import { NoteFragment } from \\"../fragments/Note\\"

export const updatedNote = gql\`
  subscription updatedNote {
  updatedNote {
      ...NoteFields
  }
}

  \${NoteFragment}
\`
",
      "name": "updatedNote",
    },
    Object {
      "implementation": "import gql from \\"graphql-tag\\"
import { NoteFragment } from \\"../fragments/Note\\"

export const deletedNote = gql\`
  subscription deletedNote {
  deletedNote {
      ...NoteFields
  }
}

  \${NoteFragment}
\`
",
      "name": "deletedNote",
    },
    Object {
      "implementation": "import gql from \\"graphql-tag\\"
import { CommentFragment } from \\"../fragments/Comment\\"

export const newComment = gql\`
  subscription newComment {
  newComment {
      ...CommentFields
  }
}

  \${CommentFragment}
\`
",
      "name": "newComment",
    },
    Object {
      "implementation": "import gql from \\"graphql-tag\\"
import { CommentFragment } from \\"../fragments/Comment\\"

export const updatedComment = gql\`
  subscription updatedComment {
  updatedComment {
      ...CommentFields
  }
}

  \${CommentFragment}
\`
",
      "name": "updatedComment",
    },
    Object {
      "implementation": "import gql from \\"graphql-tag\\"
import { CommentFragment } from \\"../fragments/Comment\\"

export const deletedComment = gql\`
  subscription deletedComment {
  deletedComment {
      ...CommentFields
  }
}

  \${CommentFragment}
\`
",
      "name": "deletedComment",
    },
  ],
}
`;
